# sha2-on-cq-halo2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
arithmetic/curves/: Cargo.toml
arithmetic/curves/src/: arithmetic.rs  batch_pairing.rs  lib.rs  pairing.rs
arithmetic/curves/src/bn256/: curve.rs  engine.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs
arithmetic/curves/src/derive/: curve.rs  field.rs
arithmetic/curves/src/secp256k1/: curve.rs  fp.rs  fq.rs
arithmetic/curves/src/tests/: curve.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/halo2/: all.html  index.html
docs/halo2_proofs/: all.html  enum.SerdeFormat.html  index.html  sidebar-items.js
docs/halo2curves/: all.html  index.html  macro.batch_add!.html  macro.batch_add.html  macro.field_arithmetic!.html  macro.field_arithmetic.html  macro.field_common!.html  macro.field_common.html  macro.field_specific!.html  macro.field_specific.html  macro.impl_add_binop_specify_output!.html  macro.impl_add_binop_specify_output.html  macro.impl_binops_additive!.html  macro.impl_binops_additive.html  macro.impl_binops_additive_specify_output!.html  macro.impl_binops_additive_specify_output.html  macro.impl_binops_multiplicative!.html  macro.impl_binops_multiplicative.html  macro.impl_binops_multiplicative_mixed!.html  macro.impl_binops_multiplicative_mixed.html  macro.impl_sub_binop_specify_output!.html  macro.impl_sub_binop_specify_output.html  macro.new_curve_impl!.html  (+8 more)
halo2_proofs/: Cargo.toml
sha/: Cargo.toml
sha-reference/: Cargo.toml
(+509 files in other folders)
