[workspace]
members = [
    "halo2",
    "halo2_proofs",
    "arithmetic/curves",
    "primitives/poseidon"
]

exclude = [
    "sha",
    "sha-reference",
]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
panic = "abort"
# codegen-units = 1 is not optimal on my machine; always profile locally to determine best preferences
# codegen-units = 1
